fix: product external link and author id
